# pilot_control

./: CMakeLists.txt  README_ROBOT_DEPLOYMENT.md  ReadMe.md  package.xml
config/: nav2_params.yaml  octo_occu.yaml
docs/: MANUAL_MAP_SAVING.md  TILTED_LIDAR_SETUP.md  frames_2025-07-31_18.56.20.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/pilot_control/lib/pilot_control/: host_teleop  navigation_test  torque_test  turn_test
install/pilot_control/share/ament_index/resource_index/package_run_dependencies/: pilot_control
install/pilot_control/share/pilot_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pilot_control/share/pilot_control/cmake/: pilot_controlConfig.cmake
install/pilot_control/share/pilot_control/launch/: robot.launch.py  teleop.launch.py
launch/: diff_drive_only.launch.py  laptop_teleop.launch.py  mapping_only.launch.py  nav2_bringup.launch.py  nav2_with_map.launch.py  robot.launch.py  robot_complete.launch.py  robot_with_nav2.launch.py
log/: latest_build  latest_list
scripts/: ODRIVE_S1_SETUP_GUIDE.md  TEST_GPR_POSITION_README.md  VELOCITY_ESTIMATION_EXPLAINED.md  bot_travel_distance.py  cam_test.cpp  cam_view  check_maps.sh  check_transforms.sh  copy_latest_map.sh  drive_travel_distance.py  gpr_scan_controller.py  gpr_serial_bridge.py  gpr_travel_distance.py  left_wheel_distance.py  micro_can_setup.py  monitor_topics.py  move_one_meter.py  odrive_micro_calib.py  odrive_s1_calib.py  odrive_s1_configured.py  path_to_foot.py  robot_control.sh  test_gpr_position.py  verify_gpr_scan.sh
scripts/Camera calibration/: camcal.py  dual_camera_undistort.py  dual_camera_undistort_backup.py  dual_undistort_stitch.py  lcamera_calib.yaml  rcamera_calib.yaml  undistort_test.py
scripts/gpr_data/: s1-060_20250930_164334_20251009_123735.sgy  s1-060_20250930_164334_20251009_123735_radargram.npz  segy_data_extr.py
scripts/odrive_debug/: calibration.py  con_check.py
scripts/servo_gpr/: servo_gpr.ino
src/: can_test.py  client_teleop_serial.cpp  diff_drive_controller.cpp  gpr_motion_follower.cpp  gpr_scan_controller.cpp  host_teleop.cpp  laser_map_rotator.cpp  map_relay.cpp  navigation_test.cpp  pcd_processor.cpp  pcd_saver.cpp  raw_map_saver.cpp  shutdown_service.cpp  test_rotation.cpp  tf_bridge.cpp  topic_throttle.cpp  torque_test.cpp  turn_test.cpp  video_recorder.cpp  video_streamer_gst.cpp  video_streamer_node.cpp
src/motor_Test/: motor_Test.ino
src/serial_arduino/: serial_arduino.ino
