<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pilot_control</name>
  <version>0.1.0</version>
  <description>ROS 2 package for teleoperation and motor control over serial, used in a laptop + LattePanda distributed system.</description>

  <maintainer email="roofus@todo.todo">roofus</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>odrive_can</depend>

  <!-- Optional: required only for LattePanda serial bridge -->
  <build_depend>serial</build_depend>
  <exec_depend>serial</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
